 * gameplay changes:
   * backstab now works if opposite unit is non-incapacitated enemy of defender
   * prevented stoned units from being healed
   * slow does not remove an attack anymore
   * slow still temporarily doubles movement cost
   * slowed units do not emit ZoC
   * hitting with slow changes attack order to allow attacker to strike again
   * slowed units lose initiative on fight
 * units and balancing changes:
   * decreased Dwarvish Fighter hammer attack damage from 9 to 8
   * decreased Merman Hunter experience needed to level from 38 to 35
   * Northerners can now recruit Rocklobber in Age of Heroes era
   * removed Thug from Knalgan faction
   * removed obsolete units: Merman, Naga, Saurian, Saurian Warrior, Sea Hag,
     Triton
   * added drain on the melee attack of the Ghost
   * increased the HP of the Skeleton fighter tree by 4
   * increased the HP of the Ghoul line by 5
   * decreased the attack damage of the Ghoul line by 1
   * increased the fire resistance of the Ghoul line from 0% to 10%
   * decreased the cost for Vampire Bats from 13 to 12
   * increased the HP of the Vampire Bat from 14 to 17
   * decreased the cost of the Blood Bat from 24 to 21
   * increased the HP of the Blood Bat from 24 to 27
 * multiplayer and server
   * server: add administration functions
   * multiplayer game with "empty" as side no longer causes OOS (#4464)
   * revised multiplayer maps: Divide and Conquer, Sablestone Delta,
     Silverhead Crossing, Sullas Ruins, 1v1v1Hex, Charge, Blitz, Clash, 
     Hamlets, Meteor Lake, Den of Onis, Smallolof, Castle Hopping Isle,
     Hornshark Island
   * updated multiplayer maps cfg files: Clash, Hexcake, Smallolof
   * fixed gamelist diff bug
   * renamed "Across The River" config file to improve display order
   * renamed "Across The River" map to "Across the River"
   * made "Load Game ..." first map option (was last), for better visibility
 * campaign server
   * support new "timestamp" attribute